src/docutilsrs/tests/snapshots/parser__bullet_list_hyphen.snap
---
source: docutilsrs/tests/parser.rs
expression: pseudo_xml(&parse_rst(src))
---
<document source="<string>">
    <bullet_list bullet="-">
        <list_item>
            <paragraph>
                one
        <list_item>
            <paragraph>
                two
        <list_item>
            <paragraph>
                three
