src/docutilsrs/tests/snapshots/parser__empty.snap
---
source: docutilsrs/tests/parser.rs
expression: pseudo_xml(&tree)
---
<document source="<string>">
