src/docutilsrs/tests/snapshots/parser__enum_auto_hash.snap
---
source: docutilsrs/tests/parser.rs
expression: pseudo_xml(&parse_rst(src))
---
<document source="<string>">
    <enumerated_list enumtype="arabic" prefix="" suffix=".">
        <list_item>
            <paragraph>
                auto
        <list_item>
            <paragraph>
                items
