src/docutilsrs/tests/snapshots/parser__enum_loweralpha_start.snap
---
source: docutilsrs/tests/parser.rs
expression: pseudo_xml(&parse_rst(src))
---
<document source="<string>">
    <enumerated_list enumtype="loweralpha" prefix="" start="3" suffix=".">
        <list_item>
            <paragraph>
                just c
