src/docutilsrs/tests/snapshots/parser__enum_lowerroman_ambiguous.snap
---
source: docutilsrs/tests/parser.rs
expression: pseudo_xml(&parse_rst(src))
---
<document source="<string>">
    <enumerated_list enumtype="lowerroman" prefix="" suffix=".">
        <list_item>
            <paragraph>
                roman
        <list_item>
            <paragraph>
                two
