src/docutilsrs/tests/snapshots/parser__escape_blocks_emphasis.snap
---
source: docutilsrs/tests/parser.rs
expression: pseudo_xml(&parse_rst(src))
---
<document source="<string>">
    <paragraph>
        *not emphasis* here
