src/docutilsrs/tests/snapshots/parser__escape_ws_collapses.snap
---
source: docutilsrs/tests/parser.rs
expression: pseudo_xml(&parse_rst(src))
---
<document source="<string>">
    <paragraph>
        a b
