src/docutilsrs/tests/snapshots/parser__inline_mix.snap
---
source: docutilsrs/tests/parser.rs
expression: pseudo_xml(&parse_rst(src))
---
<document source="<string>">
    <paragraph>
        A 
        <emphasis>
            star
         and 
        <strong>
            strong
         and 
        <literal>
            lit
        .
