src/docutilsrs/tests/snapshots/parser__literal_no_nest.snap
---
source: docutilsrs/tests/parser.rs
expression: pseudo_xml(&parse_rst(src))
---
<document source="<string>">
    <paragraph>
        <literal>
            *not emphasis*
